migrator-tests/src/snapshots/migrator_tests__source_up::test_apply_till_migration_filename_pointer::{{closure}}__two_way___strictsingle field name change strategy: renamedb_state_4.snap
---
source: migrator-tests/src/lib.rs
expression: db_miration_schema_state
---
DbMigrationSchemaState {
    resources: DbInfo {
        analyzers: Analyzers(
            Info(
                {},
            ),
        ),
        functions: Functions(
            Info(
                {},
            ),
        ),
        params: Params(
            Info(
                {},
            ),
        ),
        scopes: Scopes(
            Info(
                {},
            ),
        ),
        tables: Tables(
            Info(
                {
                    "migration": DefineStatementRaw(
                        "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "student": DefineStatementRaw(
                        "DEFINE TABLE student SCHEMAFULL PERMISSIONS NONE",
                    ),
                },
            ),
        ),
        tokens: Tokens(
            Info(
                {},
            ),
        ),
        users: Users(
            Info(
                {},
            ),
        ),
    },
    migration_meta: [
        StreamLinedMigration {
            basename: Basename(
                "migration_7_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "11d98c740871216b4097896e37d3dab602107d97b8af27684afca245659689d8",
            ),
            checksum_down: Some(
                Checksum(
                    "e0c02e4b902fba690ba0afa9e4178ddfdf9183fb282b4a37e352c936dabb2134",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_6_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_5_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "83e7c986da600a11a9dc592b6d7512ac8041345ff3ff6990fad8ebc31510addb",
            ),
            checksum_down: Some(
                Checksum(
                    "0084e97627ffe9ac96748ea66b1c8992062122365aaf9b1a9054cdd92a4769b1",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_4_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "7e8893918909d1d527bc7a6a279a95d1703e445e0cde90e8082ed4fd9ced0dbf",
            ),
            checksum_down: Some(
                Checksum(
                    "3c181ebdca7900fc67015a028a1c04cbc47ee88cd90baf1f5238cac2e0b7e95e",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_3_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_2_gen_after_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: Some(
                Checksum(
                    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
                ),
            ),
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_1_init",
            ),
            extension: Extension(
                "up.surql",
            ),
            checksum_up: Checksum(
                "b7a5b1e2b57e959dc5a41f74fe98b382d31c4e181acaefb80c630d80c921024f",
            ),
            checksum_down: Some(
                Checksum(
                    "1297b3600eaa5bf46b7cb0f2ef0ec816f722f2aac01dee04e648ec8533a3884d",
                ),
            ),
        },
    ],
}
